--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
+  "name": "property-dashboard",
+  "private": true,
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "devDependencies": {
     "sass": "^1.97.0"
   }
-}
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
 }
